Change domain address

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <center>
 <h2><font color=yellow>Hello from noisecontrol</font></h2>
 
-<font color=magneta>www.noisecontrol.org</font>
+<font color=magneta>www.noisecontrol.net</font>
 
 </center>
 </body>
