--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
-<body bgcolor=blue>
-
+<body bgcolor=pink>
+<center>
 <h2><font color=yellow>Hello from noisecontrol</font></h2>
 
 <font color=magneta>www.noisecontrol.net</font>
