Change text size and bg color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body bgcolor=yellow>
 <center>
-<h2><font color=yellow>Hello from noisecontrol</font></h2>
+<h1><font color=white>Hello from noisecontrol</font></h1>
 
 <font color=magneta>www.noisecontrol.net</font>
 
